@@ -11,6 +11,11 @@
       <h1>Miaow</h1>
     </div>
     <canvas id="canvas"></canvas>
+    <ul class="instructions">
+      <li><span>Move</span>↑←↓→</li>
+      <li><span>Hearts</span>Shift</li>
+      <li><span>Winks</span>(← | →) + Shift</li>
+    </ul>
     <div class="controls">
       <label for="stats_check">
         <input type="checkbox" id="stats_check" value="0" />
